# ShadowRemoval

./: .gitignore  CMakeLists.txt  README.md
ShadowRemoval/: Parallel_Kernels.cu  Parallel_Kernels.h  ShadowRemoval.sln  ShadowRemoval.vcxproj  ShadowRemoval.vcxproj.filters
shadows_source_code/: CMakeLists.txt  README.txt
shadows_source_code/include/: Canny_Kernels.h  Canny_Master_Call.h  Color_Convert_Kernel.h  ConnComp.h  ConnCompGroup.h  Constants.h  FrameProperties.h  Gaussian_Kernels.h  LrTextureShadRem.h  Parallel_Kernels.h  Skeleton_Kernel.h  Sobel_Kernels.h  mask.h
shadows_source_code/src/: Canny_Kernels.cu  Canny_Master_Call.cu  Color_Convert_Kernel.cu  ConnComp.cpp  ConnCompGroup.cpp  FrameProperties.cu  Gaussian_Kernels.cu  LrTextureShadRem.cpp  LrTextureShadRemParams.cpp  Parallel_Kernels.cu  Skeleton_Kernel.cu  Sobel_Kernels.cu  main.cpp  mask.cu
